plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.gradle.userdev' version '7.1.38'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

sourceSets.main.resources {
    // Include resources generated by data generators.
    srcDir('src/generated/resources')

    // Exclude common development only resources from finalized outputs
    exclude("**/*.bbmodel") // BlockBench project files
    exclude("src/generated/**/.cache") // datagen cache files
}

repositories {
    // Optional-integration APIs. All compile-only + ModList-gated; none is a hard dep.
    maven { url = 'https://maven.blamejared.com' }        // JEI, Curios
    maven { url = 'https://maven.theillusivec4.top' }     // Curios (creator maven)
    maven { url = 'https://modmaven.dev' }                // Mekanism API
}

base {
    archivesName = mod_id
}

// Mojang ships Java 21 to end users in 1.21.1, so mods should target Java 21.
java.toolchain.languageVersion = JavaLanguageVersion.of(21)

// Default run configurations.
runs {
    // applies to all the run configs below
    configureEach {
        systemProperty 'forge.logging.markers', 'REGISTRIES'
        systemProperty 'forge.logging.console.level', 'debug'

        workingDirectory project.layout.projectDirectory.dir('run').dir(name)

        modSource project.sourceSets.main
    }

    client {
        // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
        systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id

        // Opt-in: boot straight into a world instead of stopping at the main
        // menu, e.g.  ./gradlew runClient -PquickPlay="New World"
        if (project.hasProperty('quickPlay')) {
            arguments.addAll '--quickPlaySingleplayer', project.property('quickPlay').toString()
        }

        // Dev visual harness: ./gradlew runClient -Pautoshot boots a throwaway world,
        // fills and opens a pack, and writes screenshots to run/client/screenshots.
        if (project.hasProperty('autoshot')) {
            systemProperty 'packwork.autoshot', '1'
        }
    }

    server {
        systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        argument '--nogui'
    }

    // This run config launches GameTestServer and runs all registered gametests, then exits.
    gameTestServer {
        systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
    }

    data {
        arguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
    }
}

// Sets up a dependency configuration called 'localRuntime'.
configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    implementation "net.neoforged:neoforge:${neo_version}"

    // Forgework (sibling project) Flux bridge. Same local-jar wiring as
    // Highroller <- Coinkeep, but scoped `compileOnly` because Forgework is an
    // OPTIONAL, ModList-gated dependency, never a hard one: we compile the one
    // bridge class against its API, and it never classloads without the mod.
    // Pinned to a specific build like Highroller pins coinkeep-1.0.0.jar; bump
    // this line when Forgework is rebuilt. If the file is missing, build it:
    // ../Forgework> gradlew build
    compileOnly files('../Forgework/build/libs/forgework-0.3.0.jar')

    // Pull Forgework into the DEV runtime only on demand (-Pforgework), so the
    // default runClient / runGameTestServer stay dependency-free and the
    // "bridge no-ops without the mod" invariant is genuinely exercised. With the
    // flag, FML's classpath locator lists forgework as a dev mod, so the combined
    // runtime can be tested in-process (./gradlew runGameTestServer -Pforgework).
    if (project.hasProperty('forgework')) {
        localRuntime files('../Forgework/build/libs/forgework-0.3.0.jar')
    }

    // --- Optional integrations (all SOFT deps) ---------------------------------
    // compileOnly the API so the one gated compat class per mod compiles; the mod
    // never hard-depends on any of them (ModList.isLoaded gates every touch, and
    // neoforge.mods.toml marks each optional). Runtime inclusion is opt-in per flag
    // so the DEFAULT build/run/tests stay dependency-free and the "none present"
    // invariant is real. Combined test: e.g. ./gradlew runClient -Pjei -Pcurios.

    // JEI — recipe/usage lookup.
    compileOnly "mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}"
    if (project.hasProperty('jei')) {
        runtimeOnly "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"
    }

    // Curios — the "back" wear slot.
    compileOnly "top.theillusivec4.curios:curios-neoforge:${curios_version}:api"
    if (project.hasProperty('curios')) {
        runtimeOnly "top.theillusivec4.curios:curios-neoforge:${curios_version}"
    }

    // Mekanism — the gas/chemical store. API-only artifact at compile time.
    compileOnly "mekanism:Mekanism:${mekanism_version}:api"
    if (project.hasProperty('mekanism')) {
        runtimeOnly "mekanism:Mekanism:${mekanism_version}"
    }
}

// Expand declared replace properties into neoforge.mods.toml.
tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties
    }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
